app/styles/main.scss
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower

@import '../styles-imports/variables';
@import '../styles-imports/mixins';
@import '../styles-imports/scaffolding.scss';
@import '../styles-imports/typography';

body {
  position: relative;
}
header.welcome {
  background: gray;
  color: white;
  display: table;
  height: 100vh;
  width: 100%;

  @media (min-width: 768px) {
    .container {
      width: 750px;
    }
  }
  @media (min-width: 992px) {
    .container {
      width: 970px;
    }
  }
  @media (min-width: 1200px) {
    .container {
      width: 1170px;
    }
  }
  .container {
    bottom: 200px;
    padding-right: 15px;
    padding-left: 15px;
    position: absolute;
    margin-right: auto;
    margin-left: auto;
    z-index: 2;
  }
  .background {
    background: 100% 50% no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
    background-size: cover;
    bottom: 0;
    display: table-cell;
    background-image: url("../images/welcome-bg-1.jpg");
    float: none;
    left: 0;
    margin-bottom: 0;
    margin-top: 0;
    position: absolute;
    right: 0;
    top: 0;
    vertical-align: middle;
    z-index: 1;
  }
  .hero-unit {
    margin-bottom: 30px;
  }
  h1 {
    color: #ffffff;
    font-size: 41px;
    font-weight: 500;
    line-height: 43.99999999999999px;
    margin: 0 0 10px;
  }
  p {
    color: #ffffff;
    font-size: 28px;
    font-weight: 300;
    line-height: 38px;
    margin-bottom: 0 0 10px;
  }

  .btn {
    font-weight: 500;
    padding-left: 30px;
    padding-right: 30px;
  }
  .btn.btn-default {
    background: transparent;
    color: white;
    &:hover, &:active, &:focus {
      background: white;
      color: $text-color;
    }
  }
  .btn.btn-large {
    font-size: 17px;
    padding: 12px 18px;
  }
  .btns .btn + .btn {
    margin-left: 20px;
  }
}

.form-control {
  color: inherit;
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Remove styling from main input */
.ta-root.focussed .ta-scroll-window.form-control {
  border: none;
  outline: none;
  @include box-shadow(none);
}
.form-control {
  border: none;
  @include box-shadow(none);
  div {
    outline: none;
  }
}
p strong,
p b {
  font-size: floor(($font-size-base * 1.5));
}

